Use jdk 19 for panama