@@ -1,11 +1,16 @@
 plugins {
     id 'java'
-    id 'org.bytedeco.gradle-javacpp-build' version "1.5.7"
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'io.spe'
 version '1.0-SNAPSHOT'
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(19))
+    }
+}
 
 repositories {
     mavenCentral()
@@ -18,22 +23,17 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.ow2.asm/asm
     implementation 'org.ow2.asm:asm:9.3'
-
     // https://mvnrepository.com/artifact/org.jetbrains/annotations
     implementation 'org.jetbrains:annotations:23.0.0'
-
     // https://mvnrepository.com/artifact/org.bytedeco/llvm
     implementation 'org.bytedeco:llvm-platform:14.0.3-1.5.8-SNAPSHOT'
-    // https://mvnrepository.com/artifact/org.bytedeco/libffi-platform
-    implementation 'org.bytedeco:libffi-platform:3.4.2-1.5.8-SNAPSHOT'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'io.spe.HelloWorld'
-    }
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview', '-Xlint:preview']
 }
